# Prism-Agentic-Analyst

./: .gitignore  README.md  pyproject.toml  railway.toml
backend/: .env.example  main.py  requirements.txt
backend/graph/: graph.py  state.py  utils.py
backend/graph/agents/: chart_agent.py  chat_agent.py  insight_agent.py  profile_agent.py  stat_agent.py  supervisor.py
backend/tests/: conftest.py  test_insight_tools.py  test_inspect_tools.py  test_quality_tools.py  test_stat_tools.py  test_utils.py
backend/tools/: chart_tools.py  chat_tools.py  clean_tools.py  export_tools.py  insight_tools.py  inspect_tools.py  quality_tools.py  stat_tools.py
docs/memory/: project_log.md
frontend/: app.py  main.py
frontend/.streamlit/: secrets.toml.example
